[gd_scene load_steps=3 format=3 uid="donate_shop_scene_1"]

[ext_resource path="res://scripts/ui/donate_shop_menu.gd" type="Script" id=1]

[node name="DonateShopMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.85)
mouse_filter = 2

[node name="MainPanel" type="Panel" parent="."]
anchor_left = 0.15
anchor_top = 0.1
anchor_right = 0.85
anchor_bottom = 0.9
theme_override_styles/panel = SubResource("PanelStyle_1")

[node name="VBox" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20
offset_top = 20
offset_right = -20
offset_bottom = -20

[node name="Header" type="HBoxContainer" parent="MainPanel/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="MainPanel/VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "üíé –î–æ–Ω–∞—Ç –ú–∞–≥–∞–∑–∏–Ω"

[node name="Spacer" type="Control" parent="MainPanel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="MainPanel/VBox/Header"]
layout_mode = 2
text = "‚úï"

[node name="CurrencyDisplay" type="HBoxContainer" parent="MainPanel/VBox"]
layout_mode = 2
alignment = 1

[node name="PearlsLabel" type="Label" parent="MainPanel/VBox/CurrencyDisplay"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "üíé –ñ–µ–º—á—É–∂–∏–Ω—ã: 0"

[node name="BuyPearlsButton" type="Button" parent="MainPanel/VBox/CurrencyDisplay"]
layout_mode = 2
text = "–ö—É–ø–∏—Ç—å Pearls"

[node name="HSeparator" type="HSeparator" parent="MainPanel/VBox"]
layout_mode = 2

[node name="CategoryTabs" type="TabContainer" parent="MainPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="–ö–æ—Å–º–µ—Ç–∏–∫–∞" type="ScrollContainer" parent="MainPanel/VBox/CategoryTabs"]
layout_mode = 2

[node name="CosmeticGrid" type="GridContainer" parent="MainPanel/VBox/CategoryTabs/–ö–æ—Å–º–µ—Ç–∏–∫–∞"]
layout_mode = 2
columns = 4

[node name="–ü–∏—Ç–æ–º—Ü—ã" type="ScrollContainer" parent="MainPanel/VBox/CategoryTabs"]
layout_mode = 2

[node name="PetGrid" type="GridContainer" parent="MainPanel/VBox/CategoryTabs/–ü–∏—Ç–æ–º—Ü—ã"]
layout_mode = 2
columns = 4

[node name="–≠–º–æ—Ü–∏–∏" type="ScrollContainer" parent="MainPanel/VBox/CategoryTabs"]
layout_mode = 2

[node name="EmotionGrid" type="GridContainer" parent="MainPanel/VBox/CategoryTabs/–≠–º–æ—Ü–∏–∏"]
layout_mode = 2
columns = 4

[node name="–ê—É—Ä—ã" type="ScrollContainer" parent="MainPanel/VBox/CategoryTabs"]
layout_mode = 2

[node name="AuraGrid" type="GridContainer" parent="MainPanel/VBox/CategoryTabs/–ê—É—Ä—ã"]
layout_mode = 2
columns = 4

[node name="–ü—Ä–µ–º–∏—É–º" type="ScrollContainer" parent="MainPanel/VBox/CategoryTabs"]
layout_mode = 2

[node name="PremiumGrid" type="VBoxContainer" parent="MainPanel/VBox/CategoryTabs/–ü—Ä–µ–º–∏—É–º"]
layout_mode = 2

[sub_resource type="StyleBoxFlat" id="PanelStyle_1"]
bg_color = Color(0.1, 0.15, 0.2, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.4, 0.6, 1)

